src/pages/Dialogs/Dialogs.module.css
.dialogsWrapper {
  position: relative;
  display: flex;
  height: 95vh;
  background: var(--color-background);
  overflow: hidden;
}

@media (min-width: 769px) {
  .dialogsWrapper {
    max-width: 70ch;
    height: 90vh;

    margin: var(--padding-primary) auto;
    border-radius: var(--border-radius-small);

    box-shadow: 0 0.25em 0.5em var(--color-shadow-light);
  }
}

.dialogsWrapper.dialogChosen .dialogsChat {
  display: flex;
}

/* 
  Use pseudoelement to dim chat 
  when dialogs list overlap it in mobile layout
*/
.dialogsChat::before {
  content: '';
  z-index: 2;
  position: absolute;
  pointer-events: none;

  width: 100%;
  height: 100%;

  background: rgba(0, 0, 0, 0.76);
  opacity: 0;
  transition: opacity 300ms ease-out;
}

.dialogsChat_overlapped::before {
  opacity: 1;
}

@media (min-width: 769px) {
  /* Disable dimming in desktop layout */
  .dialogsChat_overlapped::before {
    opacity: 0;
  }
}

.ControlButton {
  position: absolute;
  z-index: 4;
  top: calc(var(--padding-primary) - 0.3em);
  left: calc(var(--padding-primary) - 0.4em);
}

